input[type=date] - alignment issue fixed.

--- a/BlazorExpress.Bulma/wwwroot/css/blazorexpress.bulma.css
+++ b/BlazorExpress.Bulma/wwwroot/css/blazorexpress.bulma.css
@@ -20,6 +20,12 @@
     cursor: pointer;
 }
 
+/* input */
+/* date */
+input[type=date] {
+    display: inherit !important;
+}
+
 /* layout */
 html {
     overflow-y: hidden;
